# DZ1_Django

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_image_alter_blog_slug.py  0003_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category_data.json  product_data.json
catalog/management/commands/: fill_table.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_product_manufactured_at.py  0004_contact_remove_product_manufactured_at.py  0005_version.py  0006_product_owner.py  0007_product_publication.py  0008_alter_product_options.py  0009_alter_product_options.py
catalog/templates/: base.html
catalog/templates/catalog/: base.html  contact_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html  password_reset.html  password_reset_done.html
users/templates/users/: user_form.html
